aaaa/aaaa/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aaaa
  labels:
    app: aaaa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aaaa
  template:
    metadata:
      labels:
        app: aaaa
    spec:
      containers:
      - name: aaaa
        image: kind-game:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 443
        readinessProbe:
          httpGet: {path: /api/state, port: 443}
        livenessProbe:
          httpGet: {path: /api/state, port: 443}
