aaaa/aaaa/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: aaaa
  labels:
    app: aaaa
spec:
  selector:
    app: aaaa
  ports:
  - port: 443
    targetPort: 443
  type: ClusterIP
