aaaa/aaaa/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: aaaa
spec:
  podSelector:
    matchLabels:
      app: aaaa
  policyTypes:
    - Ingress
    - Egress
